# MyNeuralNetwork

./: CMakeLists.txt  README.md
sim/: Ant.cpp  Ant.h  Characters.h  DoodleBug.cpp  DoodleBug.h  Grid.cpp  Grid.h  Makefile  Organism.cpp  Organism.h  OrganismIter.cpp  OrganismIter.h  Timer.cpp  Timer.h  main.cpp
src/: Array.cpp  Array.hpp  ArrayF.cpp  ArrayF.hpp  DataLoader.cpp  DataLoader.hpp  GameState.cpp  GameState.hpp  GridState.cpp  GridState.hpp  LinearLayer.cpp  LinearLayer.hpp  Matrix.cpp  Matrix.hpp  Organism.cpp  Organism.hpp  PositionManager.cpp  PositionManager.hpp  Random.cpp  Random.hpp  Simulation.cpp  Simulation.hpp  main.cpp
